# berlin-christmas-markets-2023

./: .gitignore  README.md  pyproject.toml
src/: calendar.md  calendar_short_markets.md  collected_data.csv  markets_info.md  parsing-and-exporting-calendar.ipynb
